# advent-of-code-2020

./: Cargo.toml  README.md
challenges/: Cargo.toml
challenges/src/: lib.rs
challenges/src/day01/: README.md  mod.rs  tests.rs
challenges/src/day02/: README.md  mod.rs  password.rs  tests.rs
challenges/src/day03/: README.md  mod.rs  tests.rs  toboganning.rs
challenges/src/day04/: README.md  mod.rs  passports.rs  tests.rs
challenges/src/day05/: README.md  mod.rs  tests.rs
challenges/src/day06/: README.md  mod.rs  questionaire.rs  tests.rs
challenges/src/day07/: README.md  bags.rs  mod.rs  tests.rs
challenges/src/day08/: README.md  mod.rs  tests.rs  tokens.rs
challenges/src/day09/: README.md  mod.rs  tests.rs
challenges/src/day10/: README.md  mod.rs  tests.rs
challenges/src/day11/: README.md  mod.rs  tests.rs
challenges/src/day12/: README.md  mod.rs  tests.rs
challenges/src/day13/: README.md  mod.rs  tests.rs
challenges/src/day14/: README.md  mod.rs  tests.rs
challenges/src/day15/: README.md  mod.rs  tests.rs
challenges/src/day16/: README.md  mod.rs  tests.rs
challenges/src/day17/: README.md  mod.rs  tests.rs
challenges/src/day18/: README.md  mod.rs  tests.rs
challenges/src/day19/: README.md  mod.rs  tests.rs
challenges/src/day20/: README.md  mod.rs  tests.rs
challenges/src/day21/: README.md  mod.rs  tests.rs
challenges/src/day22/: README.md  mod.rs  tests.rs
challenges/src/day23/: README.md  mod.rs  tests.rs
challenges/src/day24/: README.md  mod.rs  (+1 more)
runner/: Cargo.toml
runner/src/: challenges.rs  logger.rs  main.rs
(+3 files in other folders)
