[package]
name = "advent-of-code-2020-runner"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "~0.3"
advent-of-code-2020-challenges = { version = "*", path = "../challenges" }
separator = "0.4.1"
